add timer field to model fix ie

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -112,29 +112,13 @@ header {
   .title {
     font-size: 24px;
     line-height: 30px;
+    img {
+      vertical-align: middle;
+      padding-right: 20px;
+    }
   }
   .content {
     font-size: 14px;
-  }
-  .one:before, .two:before, .three:before, .four:before {
-    content: '';
-    width: 29px;
-    height: 29px;
-    display: inline-block;
-    position: absolute;
-    margin-left: -35px;
-  }
-  .one:before {
-    background: url("../img/one.png");
-  }
-  .two:before {
-    background: url("../img/two.png");
-  }
-  .three:before {
-    background: url("../img/three.png");
-  }
-  .four:before {
-    background: url("../img/four.png");
   }
 }
 
@@ -226,6 +210,9 @@ header {
   }
   strong:last-child {
     color: #fff66d;
+  }
+  .timer {
+    padding: 60px 0;
   }
 }
 
