--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,31 +124,12 @@ header button {
   font-size: 24px;
   line-height: 30px;
 }
+#block_3 .title img {
+  vertical-align: middle;
+  padding-right: 20px;
+}
 #block_3 .content {
   font-size: 14px;
-}
-#block_3 .one:before,
-#block_3 .two:before,
-#block_3 .three:before,
-#block_3 .four:before {
-  content: '';
-  width: 29px;
-  height: 29px;
-  display: inline-block;
-  position: absolute;
-  margin-left: -35px;
-}
-#block_3 .one:before {
-  background: url("../img/one.png");
-}
-#block_3 .two:before {
-  background: url("../img/two.png");
-}
-#block_3 .three:before {
-  background: url("../img/three.png");
-}
-#block_3 .four:before {
-  background: url("../img/four.png");
 }
 #block_4 {
   background: url("../img/count.jpg") repeat;
@@ -236,6 +217,9 @@ header button {
 }
 #block_7 strong:last-child {
   color: #fff66d;
+}
+#block_7 .timer {
+  padding: 60px 0;
 }
 #block_8 {
   padding-top: 30px;
