--- a/static/css/style.less
+++ b/static/css/style.less
@@ -7,6 +7,7 @@ body {
   -webkit-box-shadow: 0 0 10px #333;
      -moz-box-shadow: 0 0 10px #333;
           box-shadow: 0 0 10px #333;
+  background-color: #fff;
 }
 header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
 #block_7, #block_8, #block_9, #block_10, #block_11, #block_12, #block_13 {
