--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -11,8 +11,7 @@
  * make sure we're resetting all spacing elements.
  *
  */
-html,
-body {
+html, body {
   border: 0;
   font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
   line-height: 1.5;
@@ -112,14 +111,16 @@ table {
   border-collapse: separate;
   border-spacing: 0;
 }
-table caption,
-table th,
-table td {
+table caption, table th, table td {
   text-align: left;
   vertical-align: middle;
 }
 a img {
   border: 0;
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
 :focus {
   outline: 0;
@@ -132,13 +133,9 @@ a img {
   width: 0;
   height: 0;
 }
-button,
-.button,
-input[type="submit"] {
+button, .button, input[type="submit"] {
   cursor: pointer;
 }
-button:hover,
-.button:hover,
-input[type="submit"]:hover {
+button:hover, .button:hover, input[type="submit"]:hover {
   opacity: 0.9;
 }
