--- a/static/css/style.less
+++ b/static/css/style.less
@@ -18,13 +18,20 @@ header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
   width: 900px;
   margin: 0 auto;
 }
+.col-3 {
+  float: left;
+  width: 33.333333333333%;
+  position: relative;
+  min-height: 1px;
+  margin-bottom: 20px
+}
 h1 {
   font-size: 40px;
 }
 form.ticket {
   text-align: center;
   padding-bottom: 5px;
-  input {
+  input, button {
     border: none;
     border-radius: 8px;
   }
@@ -37,7 +44,7 @@ form.ticket {
   [type="text"]:first-child {
     margin-right: 50px;
   }
-  [type=submit] {
+  [type=submit], button {
     padding: 21px;
     color: #101b3f;
     background: #fff66d;
@@ -46,6 +53,11 @@ form.ticket {
     display: block;
     margin: 35px auto;
   }
+}
+.underline {
+  text-decoration: underline;
+  text-transform: none;
+  font-size: 16px;
 }
 header {
   background: #101b3f;
@@ -152,6 +164,37 @@ header {
     margin-bottom: 20px;
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+}
+
+#document {
+  background: #f1f1f1;
+  padding-bottom: 60px;
+  h2 {
+    font-size: 43px;
+    text-align: center;
+    color: #101b3f;
+    line-height: 70px;
+  }
+  .lic {
+    margin: 0 auto;
+    padding: 30px 0;
+    width: 90%;
+    /* height: 425px; */
+    background: url('../img/document/license-bg.jpg') no-repeat;
+    background-size: cover;
+    position: relative;
+    -webkit-box-shadow: 5px 5px 5px #aaa;
+       -moz-box-shadow: 5px 5px 5px #aaa;
+            box-shadow: 5px 5px 5px #aaa;
+    .lic-box {
+      width: 78%;
+      height: 289px;
+      background: #fff;
+      margin: 0 auto;
+      overflow: hidden;
+      text-align: center;
     }
   }
 }
@@ -478,5 +521,17 @@ label.error {
   bottom: 0;
   img {
     height: 40px;
+  }
+}
+
+address {
+  padding: 25px 0;
+  color: #fff;
+  ul {
+    list-style: none;
+    text-align: center;
+    li {
+      margin-bottom: 10px;
+    }
   }
 }
