--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,9 +31,9 @@ footer,
   width: 900px;
   margin: 0 auto;
 }
-.col-3 {
+.col-4 {
   float: left;
-  width: 33.333333333333%;
+  width: 25%;
   position: relative;
   min-height: 1px;
   margin-bottom: 20px;
@@ -45,11 +45,14 @@ form.ticket {
   text-align: center;
   padding-bottom: 5px;
 }
-form.ticket input, form.ticket button {
+form.ticket input,
+form.ticket button,
+form.ticket textarea,
+form.ticket .button {
   border: none;
   border-radius: 8px;
 }
-form.ticket [type="text"], form.ticket [type="email"] {
+form.ticket [type="text"], form.ticket [type="email"], form.ticket textarea {
   padding: 12px 19px;
   font-size: 24px;
   width: 340px;
@@ -58,7 +61,7 @@ form.ticket [type="text"], form.ticket [type="email"] {
 form.ticket [type="text"]:first-child {
   margin-right: 50px;
 }
-form.ticket [type=submit], form.ticket button {
+form.ticket [type=submit], form.ticket button, form.ticket .button {
   padding: 21px;
   color: #101b3f;
   background: #fff66d;
@@ -66,6 +69,13 @@ form.ticket [type=submit], form.ticket button {
   font-size: 28px;
   display: block;
   margin: 35px auto;
+}
+form.ticket .button {
+  display: inline-block;
+}
+form.ticket textarea {
+  font-size: 16px;
+  height: 100px;
 }
 .underline {
   text-decoration: underline;
@@ -186,12 +196,12 @@ header button {
 }
 #document .lic {
   margin: 0 auto;
-  padding: 30px 0;
+  padding: 21px 0;
   width: 90%;
   /* height: 425px; */
 
   background: url('../img/document/license-bg.jpg') no-repeat;
-  background-size: cover;
+  background-size: contain;
   position: relative;
   -webkit-box-shadow: 5px 5px 5px #aaa;
   -moz-box-shadow: 5px 5px 5px #aaa;
@@ -199,7 +209,7 @@ header button {
 }
 #document .lic .lic-box {
   width: 78%;
-  height: 289px;
+  height: 219px;
   background: #fff;
   margin: 0 auto;
   overflow: hidden;
@@ -479,10 +489,10 @@ input[type="text"].valid, input[type="email"].valid {
 }
 label.error {
   position: absolute;
-  margin-left: -300px;
+  right: 0;
   color: red;
   background: #f1f1f1;
-  margin-top: -20px;
+  margin-top: -85px;
   border-radius: 5px;
   padding: 2px;
   box-shadow: 0 0 3px #333;
@@ -491,12 +501,12 @@ label.error {
   display: none;
   z-index: 10;
   width: 420px;
-  height: 270px;
+  height: 410px;
   background: #f1f1f1;
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -135px;
+  margin-top: -210px;
   margin-left: -220px;
   text-align: center;
   box-shadow: 0 0 10px #999;
