--- a/static/css/style.less
+++ b/static/css/style.less
@@ -18,9 +18,9 @@ header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
   width: 900px;
   margin: 0 auto;
 }
-.col-3 {
+.col-4 {
   float: left;
-  width: 33.333333333333%;
+  width: 25%;
   position: relative;
   min-height: 1px;
   margin-bottom: 20px
@@ -31,11 +31,11 @@ h1 {
 form.ticket {
   text-align: center;
   padding-bottom: 5px;
-  input, button {
+  input, button, textarea, .button {
     border: none;
     border-radius: 8px;
   }
-  [type="text"], [type="email"] {
+  [type="text"], [type="email"], textarea {
     padding: 12px 19px;
     font-size: 24px;
     width: 340px;
@@ -44,7 +44,7 @@ form.ticket {
   [type="text"]:first-child {
     margin-right: 50px;
   }
-  [type=submit], button {
+  [type=submit], button, .button {
     padding: 21px;
     color: #101b3f;
     background: #fff66d;
@@ -52,6 +52,13 @@ form.ticket {
     font-size: 28px;
     display: block;
     margin: 35px auto;
+  }
+  .button {
+    display: inline-block;
+  }
+  textarea {
+    font-size: 16px;
+    height: 100px;
   }
 }
 .underline {
@@ -179,18 +186,18 @@ header {
   }
   .lic {
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 21px 0;
     width: 90%;
     /* height: 425px; */
     background: url('../img/document/license-bg.jpg') no-repeat;
-    background-size: cover;
+    background-size: contain;
     position: relative;
     -webkit-box-shadow: 5px 5px 5px #aaa;
        -moz-box-shadow: 5px 5px 5px #aaa;
             box-shadow: 5px 5px 5px #aaa;
     .lic-box {
       width: 78%;
-      height: 289px;
+      height: 219px;
       background: #fff;
       margin: 0 auto;
       overflow: hidden;
@@ -486,10 +493,11 @@ input[type="text"].valid, input[type="email"].valid{
 }
 label.error {
   position: absolute;
-  margin-left: -300px;
+//  margin-left: -300px;
+  right: 0;
   color: red;
   background: #f1f1f1;
-  margin-top: -20px;
+  margin-top: -85px;
   border-radius: 5px;
   padding: 2px;
   box-shadow: 0 0 3px #333;
@@ -499,12 +507,12 @@ label.error {
   display: none;
   z-index: 10;
   width: 420px;
-  height: 270px;
+  height: 410px;
   background: #f1f1f1;
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -135px;
+  margin-top: -210px;
   margin-left: -220px;
   text-align: center;
   box-shadow: 0 0 10px #999;
