--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
         <div class="container">
             <h2>Наши документы</h2>
             <div class="license">
-                <div class="col-3">
+                <div class="col-4">
                     <div class="lic">
                         <div class="lic-box">
                             <img src="{{ STATIC_URL }}img/document/lic1.jpg" alt=""/>
@@ -91,7 +91,7 @@
 
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-4">
                     <div class="lic">
                         <div class="lic-box">
                             <img src="{{ STATIC_URL }}img/document/lic2.jpg" alt=""/>
@@ -99,7 +99,7 @@
 
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-4">
                     <div class="lic">
                         <div class="lic-box">
                             <img src="{{ STATIC_URL }}img/document/lic3.jpg" alt=""/>
@@ -107,7 +107,7 @@
 
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-4">
                     <div class="lic">
                         <div class="lic-box">
                             <img src="{{ STATIC_URL }}img/document/lic4.jpg" alt=""/>
@@ -165,11 +165,12 @@
     </div>
     <div id="block_8">
         <div class="container">
-            <form class="ticket" action="{% url 'form' %}" method="post">{% csrf_token %}
-                <input type="text" name="name" placeholder="Ваше имя"/>
-                <input type="email" name="email" placeholder="Ваш E-mail"/>
-                <button>Узнайте стоимость<br /><span class="underline">получив актуальную информацию на Ваш e-mail</span></button>
-            </form>
+            {% include 'form.html' %}
+{#            <form class="ticket" action="{% url 'form' %}" method="post">{% csrf_token %}#}
+{#                <input type="text" name="name" placeholder="Ваше имя"/>#}
+{#                <input type="email" name="email" placeholder="Ваш E-mail"/>#}
+{#                <button>Узнайте стоимость<br /><span class="underline">получив актуальную информацию на Ваш e-mail</span></button>#}
+{#            </form>#}
         </div>
     </div>
     <div id="block_9">
@@ -278,11 +279,7 @@
     {% endif %}
     <footer>
         <div class="container">
-            <form class="ticket" action="" method="post">{% csrf_token %}
-                <input type="text" name="name" placeholder="Ваше имя"/>
-                <input type="email" name="email" placeholder="Ваш E-mail"/>
-                <input type="submit" value="Да! Я хочу на САФАРИ!"/>
-            </form>
+            {% include 'form.html' %}
             <a href="" class="creator"><img src="/static/img/our-logo.png" alt=""></a>
         </div>
         <div class="container">
@@ -292,14 +289,13 @@
                     <li><strong>Nairobi, Tom Mboya st. Philadelphia house, First floor, Suite 19B, PO Box.:
                         57590-00200</strong></li>
                     <li><strong>PIN: A007062478U</strong></li>
-                    <li>+255773073331</li>
                 </ul>
             </address>
         </div>
     </footer>
 </div>
 <div class="modal">
-    {% include 'form.html' %}
+    {% include 'modal_form.html' %}
 </div>
 {{ setup.bottom_js|safe|default:'' }}
 </body>
