--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>{{ setup.title|striptags|default:'Safari Travel' }}</title>
     <meta name="description" content="{{ setup.meta_desc|striptags|default:'' }}"/>
     <meta name="keywords" content="{{ setup.meta_key|striptags|default:'' }}"/>
