--- a/static/css/lightbox.less
+++ b/static/css/lightbox.less
@@ -10,7 +10,8 @@
 	background-color:#fff;
 	background-position:center;
 	background-repeat:no-repeat;
-	font: normal 12px verdana, arial, sans-serif
+	font: normal 12px verdana, arial, sans-serif;
+   display: none;
 }
 #LG_loading {
 	background: url(ico-loading.gif) no-repeat center;
