fix  .col-4 width

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -20,7 +20,7 @@ header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
 }
 .col-4 {
   float: left;
-  width: 25%;
+  width: 225px;
   position: relative;
   min-height: 1px;
   margin-bottom: 20px
