--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ footer,
 }
 .col-4 {
   float: left;
-  width: 25%;
+  width: 225px;
   position: relative;
   min-height: 1px;
   margin-bottom: 20px;
