--- a/static/css/style.css
+++ b/static/css/style.css
@@ -517,6 +517,15 @@ label.error {
 .modal form input {
   margin-bottom: 10px;
 }
+.modal .close {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  border-radius: 20px;
+  width: 30px;
+  height: 30px;
+  background: #fd8a8a;
+}
 .creator {
   position: absolute;
   right: 10px;
