--- a/static/css/style.less
+++ b/static/css/style.less
@@ -520,6 +520,15 @@ label.error {
       margin-bottom: 10px;
     }
   }
+  .close {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border-radius: 20px;
+    width: 30px;
+    height: 30px;
+    background: rgb(253, 138, 138);
+    }
 }
 .creator {
   position: absolute;
