--- a/static/css/style.less
+++ b/static/css/style.less
@@ -522,7 +522,7 @@ label.error {
   }
   .close {
     position: absolute;
-    top: -10px;
+    top: -30px;
     right: -10px;
     border-radius: 20px;
     width: 30px;
@@ -551,5 +551,100 @@ label.error {
         margin-bottom: 10px;
       }
     }
+  }
+}
+
+@-webkit-keyframes puff-out{
+    0%{-webkit-transform:rotate(0deg) scale(1,1);-webkit-transform-origin:50% 50%;opacity:1}
+    100%{-webkit-transform:rotate(0deg) scale(2,2);-webkit-transform-origin:50% 50%;opacity:0}
+}
+@-moz-keyframes puff-out{
+    0%{-moz-transform:rotate(0deg) scale(1,1);-moz-transform-origin:50% 50%;opacity:1}
+    100%{-moz-transform:rotate(0deg) scale(2,2);-moz-transform-origin:50% 50%;opacity:0}
+}
+@-o-keyframes puff-out{
+    0%{-o-transform:rotate(0deg) scale(1,1);-o-transform-origin:50% 50%;opacity:1}
+    100%{-o-transform:rotate(0deg) scale(2,2);-o-transform-origin:50% 50%;opacity:0}}
+@-ms-keyframes puff-out{
+    0%{-ms-transform:rotate(0deg) scale(1,1);-ms-transform-origin:50% 50%;opacity:1}
+    100%{-ms-transform:rotate(0deg) scale(2,2);-ms-transform-origin:50% 50%;opacity:0}
+}
+@keyframes puff-out{
+    0%{transform:rotate(0deg) scale(1,1);transform-origin:50% 50%;opacity:1}
+    100%{transform:rotate(0deg) scale(2,2);transform-origin:50% 50%;opacity:0}
+}
+@-webkit-keyframes puff-in{
+    0%{-webkit-transform:rotate(0deg) scale(2,2);opacity:0;-webkit-transform-origin:50% 50%}
+    100%{-webkit-transform:rotate(0deg) scale(1,1);opacity:1;-webkit-transform-origin:50% 50%}
+}
+@-moz-keyframes puff-in{
+    0%{-moz-transform:rotate(0deg) scale(2,2);opacity:0;-moz-transform-origin:50% 50%}
+    100%{-moz-transform:rotate(0deg) scale(1,1);opacity:1;-moz-transform-origin:50% 50%}
+}@-o-keyframes puff-in{
+     0%{-o-transform:rotate(0deg) scale(2,2);opacity:0;-o-transform-origin:50% 50%}
+     100%{-o-transform:rotate(0deg) scale(1,1);opacity:1;-o-transform-origin:50% 50%}
+ }
+@-ms-keyframes puff-in{
+    0%{-ms-transform:rotate(0deg) scale(2,2);opacity:0;-ms-transform-origin:50% 50%}
+    100%{-ms-transform:rotate(0deg) scale(1,1);opacity:1;-ms-transform-origin:50% 50%}
+}
+@keyframes puff-in{
+    0%{transform:rotate(0deg) scale(2,2);opacity:0;transform-origin:50% 50%}
+    100%{transform:rotate(0deg) scale(1,1);opacity:1;transform-origin:50% 50%}
+}
+.video {
+  position: relative;
+
+  &-button {
+    width: 100px;
+    height: 100px;
+    right: 50%;
+    top: 100px;
+    position: absolute;
+    img {
+      cursor: pointer;
+      border: 0px #000000 solid;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+
+      -webkit-animation: puff-in 1000ms linear 0ms infinite normal, puff-out 1000ms linear 0ms infinite normal;
+      -moz-animation: puff-in 1000ms linear 0ms infinite normal, puff-out 1000ms linear 0ms infinite normal;
+      -ms-animation: puff-in 1000ms linear 0ms infinite normal, puff-out 1000ms linear 0ms infinite normal;
+      animation: puff-in 1000ms linear 0ms infinite normal, puff-out 1000ms linear 0ms infinite normal;
+      //    left: 0;
+      //    top: 0;
+      //    width: 100%;
+      //    height: 100%;
+    }
+  }
+}
+
+.modal_video {
+  display: none;
+  z-index: 10;
+  width: 600px;
+  height: 400px;
+  background: #f1f1f1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -200px;
+  margin-left: -300px;
+  text-align: center;
+  box-shadow: 0 0 10px #999;
+  .close {
+    position: absolute;
+    top: -30px;
+    right: -10px;
+    border-radius: 20px;
+    width: 30px;
+    height: 30px;
+    background: rgb(253, 138, 138);
+  }
+  iframe {
+    width: 100% !important;
+    height: 100% !important;
   }
 }
