add video arrow, video title

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -595,6 +595,20 @@ label.error {
 .video {
   position: relative;
 
+  &-title {
+    width: 400px;
+    height: 300px;
+    background: url("../img/arrow_video.png") 0 50px no-repeat;
+    position: absolute;
+    right: 0;
+    span {
+      font-family: 'Marck Script', cursive;
+      font-size: 40px;
+      color: #fff;
+      text-shadow: 2px 2px 3px #333;
+    }
+  }
+
   &-button {
     width: 100px;
     height: 100px;
