--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <script src="{{ STATIC_URL }}js/lightgallery.min.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.lwtCountdown-1.0.js"></script>
     <script src="{{ STATIC_URL }}js/common.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Marck+Script&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/reset.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/lightbox.css">
@@ -36,6 +37,9 @@
         <div class="container">
             <p>Хотите совершить сафари-путешествие по <br/> Африке и сэкономить до 30% <br/> от стоимости тура?</p>
             <div class="video">
+                <div class="video-title">
+                    <span>Что вас ждёт</span>
+                </div>
                 <div class="video-button">
                     <img src="{{ STATIC_URL }}img/play-button.png"  alt="Посмотреть видео"/>
                 </div>
