--- a/static/css/style.css
+++ b/static/css/style.css
@@ -672,6 +672,19 @@ label.error {
 .video {
   position: relative;
 }
+.video-title {
+  width: 400px;
+  height: 300px;
+  background: url("../img/arrow_video.png") 0 50px no-repeat;
+  position: absolute;
+  right: 0;
+}
+.video-title span {
+  font-family: 'Marck Script', cursive;
+  font-size: 40px;
+  color: #fff;
+  text-shadow: 2px 2px 3px #333;
+}
 .video-button {
   width: 100px;
   height: 100px;
