--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,3 +1,5 @@
+@import "__includes/navigation.less";
+
 body {
   background: #ccc;
 }
@@ -17,6 +19,7 @@ header, footer, #block_1, #block_2, #block_3, #block_4, #block_5, #block_6,
 .container {
   width: 900px;
   margin: 0 auto;
+  position: relative;
 }
 .col-4 {
   float: left;
@@ -68,7 +71,7 @@ form.ticket {
 }
 header {
   background: #101b3f;
-  padding: 10px 0;
+  padding-bottom: 10px;
   img {
     float: left;
   }
