--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
 <body>
 <div id="wrapper">
     <header>
+      {% include "__includes/menu.html" %}
         <div class="container">
             <img src="{{ STATIC_URL }}img/logotype.png" alt="Enjoy Africa Travel companies"/>
             <button>Узнайте подробности</button>
