--- a/templates/__includes/menu.html
+++ b/templates/__includes/menu.html
@@ -9,8 +9,7 @@
   <div class="container">
     <ul>
       <li><a href="#" class="active">Главная</a></li>
-      <li><a href="#">Отзывы клиентов</a></li>
-      <li><a href="#">Блог нашего гида</a></li>
+      <li><a href="#">Отзывы\Блог</a></li>
       <li><a href="#">О нас</a></li>
       <li><a href="#">Групповые туры</a></li>
     </ul>
