--- a/templates/__includes/menu.html
+++ b/templates/__includes/menu.html
@@ -13,6 +13,10 @@
       <li><a href="#">О нас</a></li>
       <li><a href="#">Групповые туры</a></li>
     </ul>
-    <button class="auth-button">Вход</button>
+    {% if user.is_authenticated %}
+       <a href="{% url 'logout' %}?next=/" class="auth-button button">Выход</a>
+    {% else %}
+      <a href="#pop-auth" class="auth-button button">Вход</a>
+    {% endif %}
   </div>
 </nav>
