--- a/templates/modal_form.html
+++ b/templates/modal_form.html
@@ -1,6 +1,6 @@
-<form class="ticket" action="{% url 'form' %}" method="post">{% csrf_token %}
-    <input type="text" name="name" placeholder="Ваше имя"/>
-    <input type="email" name="email" placeholder="Ваш E-mail"/>
+<form class="ticket pop-form" action="{% url 'form' %}" method="post">{% csrf_token %}
+    <input type="text" name="name" class="pop-form__name" placeholder="Ваше имя"/>
+    <input type="email" name="email" class="pop-form__email" placeholder="Ваш E-mail"/>
     <textarea id="id_comment" name="comment" placeholder="Вы можете оставить сообщение"></textarea>
     <input type="submit" value="Отправьте заявку"/>
 </form>
